[package]
name = "sop_kode"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
rand = "0.8"
num-traits = "0.2.17"
num-bigint = { version = "0.4.4", features = ["rand"] }
rayon = "1.8.0"
bytes = { version = "1.5.0", features = [] }


[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"] }
lazy_static = "1.4.0"

[[bench]]
name = "rsa_benchmark"
harness = false
